exports[`Test contact card reducer handles REQUEST_CONTACT_CARD action 1`] = `
Object {
  "contact": Object {},
  "loading": true,
}
`;

exports[`Test contact card reducer handles REQUEST_CONTACT_CARD_SUCCESS action 1`] = `
Object {
  "contact": Object {
    "email": "test@test.com",
    "id": "-1",
    "imgUrl": "http://www.test.image.com",
    "name": "Tester",
    "phoneNumber": "666666666",
  },
  "loading": false,
}
`;

exports[`Test contact card reducer handles REQUEST_DELETE_CONTACT_CARD action 1`] = `
Object {
  "contact": Object {},
  "loading": true,
}
`;

exports[`Test contact card reducer handles RESET_CONTACT_CARD action 1`] = `
Object {
  "contact": Object {},
  "loading": false,
}
`;

exports[`Test contact card reducer handles SET_ERROR_MESSAGE action 1`] = `
Object {
  "contact": Object {},
  "loading": false,
}
`;

exports[`Test contact card reducer returns the initialState state on an undefined state 1`] = `
Object {
  "contact": Object {},
  "loading": false,
}
`;

exports[`Test contact card reducer returns the same state on an unhandled action 1`] = `
Object {
  "contact": Object {},
  "loading": false,
}
`;
